maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^ShortestPathMaze:2: error: expected start of definition
override def run() {
         ^ShortestPathMaze:12: error: expected class or object definition
def indicationBaggle(){
^ShortestPathMaze:24: error: expected class or object definition
def traceChemin(){
^ShortestPathMaze:40: error: expected class or object definition
def trouveForce(){
^ShortestPathMaze:55: error: Missing closing brace `}' assumed here
  if(!estFaceMur){
  ^ShortestPathMaze:60: error: Missing closing brace `}' assumed here
  if(!estFaceMur){
  ^